openwebui-ollama-manifests/openwebui-ingress.yaml
# openwebui ingress
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: openwebui-ingress
  namespace: llm-stack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`devops-jh.darienc.com`)
      kind: Rule
      services:
        - name: openwebui
          port: 8080
  tls:
    certResolver: letsencrypt
